# comfyui-character-prompt-builder

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  install.py  nodes.py  pyproject.toml  render_prompt.py  setup.py  uninstall.py  utils.py
.github/: copilot-instructions.md
node_defs/: __init__.py  animal.py  animal_actions.py  female_fashion.py  female_person.py  female_poses.py  male_fashion.py  male_person.py  male_poses.py  scene.py  spaceship_character.py  spaceship_mods.py
resources/: character_prompt.json  portrait_prompt.json
web/js/: renderPrompt.js
