[project]
name = "comfyui-character-prompt-builder"
version = "2.3.0"
description = "A modular character prompt generator for ComfyUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Euan Greenwood"},
    {name = "Forked from AI Wiz Art (Stefano Flore)"}
]
keywords = ["comfyui", "prompt", "character", "stable-diffusion", "ai", "image-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/euan-gwd/comfyui-character-prompt-builder"
Repository = "https://github.com/euan-gwd/comfyui-character-prompt-builder"
Issues = "https://github.com/euan-gwd/comfyui-character-prompt-builder/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]
